k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: kustomize
  name: demo
