k8s/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: kustomize
  name: api
  namespace: demo
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: kustomize
  name: api
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: fridge-stats
        app.kubernetes.io/managed-by: kustomize
        app: api
    spec:
      containers:
        - name: api
          image: REPLACE_WITH_YOUR_REGISTRY/stats-api:0.4.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
