k8s/base/ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: kustomize
  name: ui
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: fridge-stats
    app.kubernetes.io/managed-by: kustomize
  name: ui
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: fridge-stats
        app.kubernetes.io/managed-by: kustomize
        app: ui
    spec:
      containers:
        - name: ui
          image: REPLACE_WITH_YOUR_REGISTRY/stats-ui:0.4.0
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
